--- a/FriendlyAutopilot/FriendlyAutopilot/FriendlyAutopilot.vcxproj.filters
+++ b/FriendlyAutopilot/FriendlyAutopilot/FriendlyAutopilot.vcxproj.filters
@@ -31,5 +31,6 @@
     <None Include="..\..\MyFirstMSFSApp\MyFirstMSFSApp\.clang-format">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
