Get HTTP server and simconnect client working simultanously, and add thread-safe buffer for passing status data between the two

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -27,6 +27,6 @@ find_library(SIMCONNECT_LIBRARY
 ###################
 add_executable(main src/main.cpp 
 					src/sim_api.cpp 
-					src/http_server.cpp)
+					src/http_server.cpp "src/state_buffer.h")
 target_link_libraries(main ${SIMCONNECT_LIBRARY})
 file(COPY ${SIMCONNECT_INSTALL_DIR}/lib/SimConnect.dll DESTINATION ${PROJECT_BINARY_DIR})
